API Controller 정리 작업