@@ -1,41 +1,33 @@
-package com.skhkim.instaclone.controller;
+package com.skhkim.instaclone.controller.apiController;
 
-
+import com.skhkim.instaclone.context.LoginContext;
 import com.skhkim.instaclone.dto.ClubMemberDTO;
 import com.skhkim.instaclone.repository.ClubMemberRepository;
-import com.skhkim.instaclone.security.dto.ClubAuthMemberDTO;
 import com.skhkim.instaclone.service.LoginService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.access.prepost.PreAuthorize;
-import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Controller;
-import org.springframework.ui.Model;
-import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 @Controller
+@RequiredArgsConstructor
 @RequestMapping("/member/")
 @Log4j2
-@RequiredArgsConstructor
-public class MemberController {
-
+public class MemberApiController {
     private final ClubMemberRepository clubMemberRepository;
     private final PasswordEncoder passwordEncoder;
     private final LoginService loginService;
     @Value("${password.reset.key")
     private String passwordResetKey;
     @PostMapping("")
-    public String singupMember(@AuthenticationPrincipal ClubAuthMemberDTO clubAuthMemberDTO,
-             ClubMemberDTO memberDTO,
-             RedirectAttributes redirectAttributes){
+    public String singupMember(ClubMemberDTO memberDTO){
 
         boolean checkResult = loginService.checkDuplication(memberDTO);
 
@@ -51,27 +43,29 @@ public class MemberController {
         return "redirect:/sidebar";
 
     }
-    @GetMapping({"/modify",""})
-    @PreAuthorize("hasRole('USER')")
-    public void signup(@AuthenticationPrincipal ClubAuthMemberDTO clubAuthMemberDTO,
-                       Model model){
-        boolean checkPassowrd =  passwordEncoder.matches(passwordResetKey, clubMemberRepository.findByName(clubAuthMemberDTO.getName()).getPassword());
-        model.addAttribute("checkPassword", checkPassowrd);
-        model.addAttribute("memberDTO", clubAuthMemberDTO);
-    }
+//    @GetMapping({"/modify",""})
+//    @PreAuthorize("hasRole('USER')")
+//    public void signup(@AuthenticationPrincipal ClubAuthMemberDTO clubAuthMemberDTO,
+//                       Model model){
+//
+//        boolean checkPassowrd =  passwordEncoder.matches(passwordResetKey, clubMemberRepository.findByName(clubAuthMemberDTO.getName()).getPassword());
+//        model.addAttribute("checkPassword", checkPassowrd);
+//        model.addAttribute("memberDTO", clubAuthMemberDTO);
+    // Password를 그대로 뱉는 문제가 있음 지금.. 이거 MemberDTO에서 왜 전부다 받아서 쓰는지 확인하고 수정해야함.
+//    }
 
     @PreAuthorize("hasRole('USER')")
     @PostMapping("/socialChange")
-    public String socialChange(@AuthenticationPrincipal ClubAuthMemberDTO clubAuthMemberDTO,
-                               ClubMemberDTO memberDTO, String newPassword) throws UnsupportedEncodingException {
+    public String socialChange(ClubMemberDTO memberDTO, String newPassword){
         boolean checkResult = clubMemberRepository.existsByName(memberDTO.getName());
         if (checkResult){
             return "redirect:/member/modify?nameError";
         }
         else{
-            loginService.updatePassword(clubAuthMemberDTO.getName(), newPassword);
-            loginService.updateUserName(memberDTO.getName(),clubAuthMemberDTO.getName());
-            String encodedName = URLEncoder.encode(memberDTO.getName(), "UTF-8");
+            String loginName = LoginContext.getUserInfo().getUserName();
+            loginService.updatePassword(loginName, newPassword);
+            loginService.updateUserName(memberDTO.getName(),loginName);
+            String encodedName = URLEncoder.encode(memberDTO.getName(), StandardCharsets.UTF_8);
             return "redirect:/sidebar/"+encodedName;
         }
     }
